@startuml


class Controller{
    -private TableColumn<ToDoListData, Boolean> isCompleted;
    -private TableView<ToDoListData> itemContainer
    -private TableColumn<ToDoListData, DatePicker> itemDate
    -private TableColumn<ToDoListData, String> itemDescription
    -private TableColumn<ToDoListData, String> itemName

    +addItem()
    +clearList()
    +loadList()
    +openHelp()
    +removeItem()
    +saveList()
    +showAllItems()
    +showCompleted()
    +showIncompleted()
    +editCompleted()
}

class TodoListApplication{
    +main(String[] args)
    +startscene()
}

class ToDoListData{
    +ToDoListData()
    +getName()
    +setName()
    +getDescription()
    +setDescription()
    +getDate()
    +setDate()
    +getCompleted()
    +setCompleted()

}

class SaveFile{
    +saveTextToFile()
    +save()
}

class LoadFile{
    +loadTextFromFile()
    +load()
}

TodoListApplication -- Controller
Controller -- ToDoListData
Controller -- LoadFile
Controller -- SaveFile

@enduml